rnsc/test_data/rns_integration/error/parser/mangled_name_directive/missing_operand_recovers.rns
; Tests that parser continues after missing operand error and reports subsequent errors
; Expected errors: E-020 (missing operand), E-034 (unexpected token in inner body)

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object
    .mangled_name

    unknown_token ; <- E-034, still reported after recovery
.inner_end

.class_end
